--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "phpunit/phpunit": "^8.1",
         "vimeo/psalm": "^3.3",
         "symfony/var-dumper": "^4.2",
-        "php-coveralls/php-coveralls": "^2.1"
+        "php-coveralls/php-coveralls": "^2.1",
+        "illuminate/support": ">=6.0"
     },
     "autoload": {
         "psr-4": {
