--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,20 @@
     "require": {
         "php": ">=7.2",
         "ext-json": "*",
-        "ext-curl": "*",
-        "nimbly/shuttle": "^0.3"
+        "psr/http-message": "^1.0",
+        "psr/http-client-implementation": "^1.0",
+        "php-http/httplug": "^2.0",
+        "php-http/message-factory": "^1.0",
+        "php-http/discovery": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.1",
         "vimeo/psalm": "^3.3",
         "symfony/var-dumper": "^4.2",
         "php-coveralls/php-coveralls": "^2.1",
+        "php-http/mock-client": "^1.0",
+        "php-http/message": "^1.0",
+        "guzzlehttp/psr7": "^2.1",
         "illuminate/support": ">=6.0"
     },
     "autoload": {
