--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "courier/courier",
+  "name": "absmugz/courier",
   "version": "v2.0.2",
   "description": "Courier PHP Library",
   "keywords": [
